# globant

./: .env.example  .gitignore  README.md  create_ms.sh  docker-compose.yml
hiring-service/: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml  pyrightconfig.json
hiring-service/src/app/: alembic.ini  main.py
hiring-service/src/app/api/: main.py
hiring-service/src/app/api/handlers/: exception_handlers.py
hiring-service/src/app/api/middleware/: correlation_id.py
hiring-service/src/app/api/routes/: ingestion.py  metrics.py
hiring-service/src/app/core/config/: settings.py
hiring-service/src/app/core/exceptions/: __init__.py  base.py  cache.py  ingestion.py  metrics.py  storage.py
hiring-service/src/app/core/logging/: logger.py
hiring-service/src/app/db/: __init__.py
hiring-service/src/app/integrations/duckdb/: client.py
hiring-service/src/app/integrations/storage/: client_protocol.py
hiring-service/src/app/migrations/: env.py
hiring-service/src/app/models/: models.py
hiring-service/src/app/schemas/: base.py
hiring-service/src/app/workers/: process_employees_chunk.py
hiring-service/src/app/workers/helpers/: batch_status.py  (+3 more)
hiring-service/tests/: conftest.py
hiring-service/tests/integration/: conftest.py
hiring-service/tests/integration/integrations/: test_duckdb_client_integration.py
hiring-service/tests/integration/workers/: test_employee_writer_integration.py  test_process_employees_chunk_integration.py
hiring-service/tests/unit/api/: conftest.py
hiring-service/tests/unit/workers/: test_process_employees_chunk.py
(+101 files in other folders)
